--- a/notes/frontend/src/components/TagList.css
+++ b/notes/frontend/src/components/TagList.css
@@ -1,9 +1,8 @@
 .tags,
 .folders {
   color: black;
-  padding: 0.5em;
-  margin-bottom: 1px solid black;
-  /* margin-bottom: 10px solid red; */
+  /* padding: 0.5em; */
+  /* border-bottom: 1px solid var(--neutral-200); */
 }
 
 .section-heading {
@@ -16,37 +15,50 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-  padding: var(--padding-sm) var(--padding-md);
+  padding: var(--padding-md);
   font: 1.2rem;
   gap: 1rem;
-  border-bottom: 1px solid var(--neutral-200);
+  border-bottom: 1px solid red;
   border-radius: 0;
-  transition:
-    background-color 0.2s ease,
-    border-color 0.2s ease,
-    border-radius 0.2s ease;
+  margin: 0;
 }
 
-.tag:hover,
-.folder:hover {
-  background-color: var(--neutral-200);
-  border-color: var(--neutral-300);
-  border-radius: 0.5em;
-}
+/* Small screens: hover active */
+@media (max-width: 767px) {
+  .tag:hover,
+  .folder:hover {
+    background-color: var(--neutral-200);
+    border-color: var(--neutral-300);
+    border-radius: 0.5em;
+  }
 
-.tag-list li:has(+ li:hover),
-.folder-list li:has(+ li:hover) {
-  border-color: transparent;
-  transition:
-    background-color 0.2s ease,
-    border-color 0.2s ease,
-    border-radius 0.2s ease;
+  .tag-list li:has(+ li:hover),
+  .folder-list li:has(+ li:hover) {
+    border-color: transparent;
+    border-bottom-color: transparent;
+    border: none;
+    color: red;
+    transition:
+      background-color 0.2s ease,
+      border-color 0.2s ease,
+      border-radius 0.2s ease;
+  }
+  .tag:has(+ .tag:hover) {
+    color: red; /* Or any other desired styles */
+  }
 }
 
 .tag-list li:last-child,
 .folder-list li:last-child {
   border-bottom: none;
 }
+
+/* .tag:hover, */
+/* .folder:hover { */
+/*   background-color: var(--neutral-200); */
+/*   border-color: var(--neutral-300); */
+/*   border-radius: 0.5em; */
+/* } */
 
 @media (min-width: 768px) {
   .tags,
@@ -62,20 +74,32 @@
     padding: var(--padding-sm) var(--padding-md);
     background-color: var(--neutral-200);
     position: sticky;
-    border-radius: 0.3em;
+    border-radius: 0.3rem;
     top: 0;
     left: 0;
+    z-index: inherit;
   }
 
   .tag,
   .folder {
-    /* padding: var(--padding-sm) var(--padding-lg); */
+    padding: var(--padding-sm);
     font: 0.9rem;
+    border-radius: 0.5em;
     border-bottom: none;
   }
 
-  .tag:hover,
-  .folder:hover {
-    background-color: transparent;
+  .tag:focus,
+  .folder:focus {
+    background-color: var(--neutral-200);
   }
+
+  .tag:focus .arrow-right,
+  .folder:focus .arrow-right {
+    visibility: visible;
+  }
+
+  /* .tag:hover, */
+  /* .folder:hover { */
+  /*   background-color: transparent; */
+  /* } */
 }
